--- a/home.html
+++ b/home.html
@@ -8,13 +8,22 @@
 	<link href='https://fonts.googleapis.com/css?family=Lusitana' rel='stylesheet' type='text/css'>
 </head>
 
+<div class="socialmedia">
+<a href="https://www.facebook.com/" target="_blank"><img src= "img/logossocialmedia-01.png"></img></a>
+<a href="https://twitter.com/" target="_blank"><img src= "img/logossocialmedia-02.png"></img></a>
+<a href="https://www.instagram.com/" target="_blank" ><img src= "img/logossocialmedia-03.png"></img></a>
 
+</div>
 <body>
+<div class= "firstpage">
 	<div id="box1">
 	<h1>VEGANISM</h1>
 	<h2>Plant your new lifestyle</h2>
 	</div>
-
+	<div Class="arrow">
+	<a href="#why"><img src="img/arrowdown.png"></img></a>
+	</div>
+</div>
 	<div id="why">
 		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
@@ -22,7 +31,11 @@
 		consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
 		cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
 		proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+		<div Class="arrow">
+	<a href="#gallery"><img src="img/arrowdown.png"></img></a>
 	</div>
+	</div>
+
 
 	<div id="gallery"> 
 	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
