--- a/home.html
+++ b/home.html
@@ -25,14 +25,17 @@
 	</div>
 </div>
 	<div id="why">
-		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-		consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-		cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-		proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+		<img src="https://s-media-cache-ak0.pinimg.com/474x/bf/33/b4/bf33b4a26218fc8b1e4462ab7ed1472e.jpg">
+		<div class="one">
+		<h3>for the animals</h3>
+		<p>Preventing the exploitation of animals is not the only reason for becoming vegan, but for many it remains the key factor in their decision to go vegan and stay vegan. Having emotional attachments with animals may form part of that reason, while many believe that all sentient creatures have a right to life and freedom. Specifics aside, avoiding animal products is one of the most obvious ways you can take a stand against animal cruelty and animal exploitation everywhere.
+		</p></div>
+		<div class="two">
+		<h4>for your health</h4>
+		<p>More and more people are turning to a vegan diet for the health benefits: increased energy, younger looking skin and eternal youth are just some of the claims from enthusiastic plant eaters. Well, eternal youth might be a bit optimistic, but there are certainly many scientifically proven benefits to vegan living when compared to the average western diet.</p></div>
 		<div Class="arrow">
-	<a href="#gallery"><img src="img/arrowdown.png"></img></a>
+		<a href="#gallery"><img src="img/arrowdown.png"></img></a>
+		<a href="#"><img src="arrowdown.png"></img></a>
 	</div>
 	</div>
 
@@ -45,6 +48,9 @@
 	cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
 	proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 	</div>
-
+<footer>
+	<p>authors: Julieta and Aleksandra</p>
+</footer>
 </body>
+
 </html>
