worked in gallery page and arrows

--- a/home.html
+++ b/home.html
@@ -31,19 +31,28 @@
 		consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
 		cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
 		proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-		<div Class="arrow">
+	<div Class="arrow">
 	<a href="#gallery"><img src="img/arrowdown.png"></img></a>
+
 	</div>
 	</div>
 
 
 	<div id="gallery"> 
-	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-	tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-	quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-	consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-	cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-	proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+		<h6>where to eat in NYC</h6>
+
+		<figure><<a href="http://bychefchloe.com/" target="_blank"><img src="img/veg1.png"></a><span>by Chloe</span>
+		</figure>
+		<Figure><a href="http://www.avantgardennyc.com/" target="_blank">
+		<img src="img/avantgarden.jpeg"></a><span>Avant Garden</span></img>
+		</Figure>
+		<Figure><a href="http://www.champsdiner.com/" target="_blank">
+		<img src="img/champion.png"></a><span>Champs dinner</span></img>
+		</Figure>
+	<div Class="arrow">
+	<a href="#why"><img src="img/arrowup.png"></img></a>
+	<a href="#"><img src="img/arrowTOP.png"></img></a>
+	</div>
 	</div>
 
 </body>
